@@ -157,23 +157,18 @@
                 <configuration>
                     <source>${targetJdk}</source>
                     <target>${targetJdk}</target>
-                    <compilerId>javac-with-errorprone</compilerId>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <compilerArgs>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>-Xplugin:ErrorProne</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>2.3.2</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                        <version>2.8</version>
-                    </dependency>
-                    <!-- override plexus-compiler-javac-errorprone's dependency on
-                         Error Prone with the latest version -->
-                    <dependency>
-                        <groupId>com.google.errorprone</groupId>
-                        <artifactId>error_prone_core</artifactId>
-                        <version>2.1.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             
             <plugin>
@@ -403,6 +398,16 @@
                         </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <fork>true</fork>
+                                <compilerArgs combine.children="append">
+                                    <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/9+181-r4173-1/javac-9+181-r4173-1.jar</arg>
+                                </compilerArgs>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <version>2.21.0</version>
                             <configuration>
@@ -441,8 +446,6 @@
                             <configuration>
                                 <additionalJOptions>
                                     <additionalJOption>-Xdoclint:none</additionalJOption>
-                                    <additionalJOption>--add-modules</additionalJOption>
-                                    <additionalJOption>java.xml.bind</additionalJOption>
                                 </additionalJOptions>
                             </configuration>
                         </plugin>
@@ -461,7 +464,7 @@
                                     <exclude>**/PerformanceMemoryTest.java</exclude>
                                     <exclude>**/PerformanceTimingTest.java</exclude>
                                 </excludes>
-                                <argLine>-Xmx2000m --add-modules java.xml.bind --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+                                <argLine>-Xmx2000m --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                                 <systemPropertyVariables>
                                     <product.version>${project.version}</product.version>
                                     <log4j.configuration>log4j-xmlsec.xml</log4j.configuration>
@@ -472,6 +475,18 @@
                     </plugins>
                 </pluginManagement>
              </build>
+             <dependencies>
+                 <dependency>
+                     <groupId>jakarta.xml.bind</groupId>
+                     <artifactId>jakarta.xml.bind-api</artifactId>
+                     <version>2.3.2</version>
+                 </dependency>
+                 <dependency>
+                     <groupId>org.glassfish.jaxb</groupId>
+                     <artifactId>jaxb-runtime</artifactId>
+                     <version>2.3.2</version>
+                 </dependency>
+             </dependencies>
          </profile>
         <profile>
             <!-- Profile for testing with EclipseLink MOXy based JAXB implementation -->
